--- a/src/desktop/package.json
+++ b/src/desktop/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "concurrently --kill-others \"npm run devserver\" \"cross-env NODE_ENV=development electron -r @babel/register native/Index.js\"",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "patch-package && electron-builder install-app-deps",
     "devserver": "node scripts/webpackServer.js",
     "build": "rimraf dist && npm run build-main && npm run build-app",
     "build-main": "./node_modules/.bin/cross-env NODE_ENV=production webpack --env=production --config webpack.config/config.main.js",
@@ -48,6 +48,7 @@
     "electron": "4.2.3",
     "electron-builder": "20.43.0",
     "electron-devtools-installer": "2.2.4",
+    "electron-notarize": "0.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
@@ -57,6 +58,7 @@
     "jest": "^24.8.0",
     "jest-image-snapshot": "^2.8.2",
     "mini-css-extract-plugin": "0.7.0",
+    "patch-package": "6.1.2",
     "puppeteer": "1.17.0",
     "react-dev-utils": "9.0.1",
     "regenerator-runtime": "^0.13.2",
@@ -113,7 +115,8 @@
           "y": 250,
           "type": "file"
         }
-      ]
+      ],
+      "sign": false
     },
     "nsis": {
       "deleteAppDataOnUninstall": true
@@ -137,7 +140,11 @@
       "target": [
         "dmg",
         "zip"
-      ]
+      ],
+      "entitlements": "./entitlements.mac.plist",
+      "entitlementsInherit": "./entitlements.mac.plist",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false
     },
     "publish": {
       "provider": "generic",
