--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -10,7 +10,7 @@
     "Charlie Varley"
   ],
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --timeout 5000 --exit --require @babel/register \"__tests__/**/*.spec.js\"",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --timeout 5000 --exit --require @babel/register \"__tests__/**/*.spec.js\"  --require babel-polyfill",
     "posttest": "rimraf realm-object-server",
     "test:watch": "yarn test --watch",
     "test:coverage": "nyc --check-coverage --lines 50 --statements 50 --functions 50 --branches 50 yarn test",
@@ -54,6 +54,7 @@
     "@babel/plugin-transform-react-jsx": "^7.0.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
+    "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
     "figma-parser": "^0.0.2",
     "mocha": "^6.1.4",
